...
  <string name="administrator_controls_download_permissions_label">Download Permissions</string>
  <string name="administrator_controls_update_on_wifi_title">Download and update only on Wi-fi</string>
  <string name="administrator_controls_update_on_wifi_message">Topics will be downloaded and updated only on Wi-fi. Any downloads or updates of cellular data will be queued.</string>
  <string name="administrator_controls_auto_update_title">Automatically update topics</string>
  <string name="administrator_controls_auto_update_message">Downloaded topics that have new content available will automatically update.</string>
  <string name="administrator_controls_app_information_label">App Information</string>
  <string name="administrator_controls_app_version">App Version</string>
  <string name="administrator_controls_account_actions_label">Account Actions</string>
  <string name="administrator_controls_log_out">Log Out</string>
  <string name="log_out_dialog_cancel_button">Cancel</string>
  <string name="log_out_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="log_out_dialog_message">Are you sure you want to log out of your profile?</string>
  <!-- AppVersionFragment -->
  <string name="app_version_label">App Version</string>
  <string name="app_version_name">%s</string>
  <string name="app_last_update_date">The last update was installed on %s. Please share the above version when sending feedback about bugs.</string>
  <string name="app_version_activity_title">App Version</string>
  <string name="copy_app_version">Copy app version</string>
  <string name="installation_id_label">Installation ID</string>
  <string name="installation_id_explanation">This ID uniquely identifies this app installation. You may be asked to provide this when filing feedback about the app or using certain features.</string>
  <string name="copy_installation_id">Copy installation ID</string>
  <!-- OptionsActivity -->
  <string name="app_language_activity_title">App Language</string>
...
