...
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version_label">

        <TextView
          android:id="@+id/app_version_text_view"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:fontFamily="sans-serif"
          android:text="@{viewModel.appVersion}"
          android:textColor="@color/component_color_shared_primary_dark_text_color"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version_container"
        app:srcCompat="@drawable/ic_info_icon_gray_24dp"
        app:tint="@color/component_color_app_version_activity_info_icon_color" />

      <TextView
        android:id="@+id/app_last_update_date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="4dp"
...
