...
    <variable
      name="viewModel"
      type="org.oppia.android.app.administratorcontrols.AdministratorControlsViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/administrator_controls_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_tertiary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/administrator_controls_fragment_recycler_view_padding_bottom"
...
